# tally

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.cargo/: config.toml
docs/: CLAUDE_USAGE_BREAKAGE_REGISTRY.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  codex.rs  history.rs  lib.rs  main.rs  plans.rs  pricing.rs  snapshot.rs  updater.rs
src-tauri/src/claude/: cache.rs  cli.rs  jsonl.rs  oauth.rs  types.rs
src-tauri/tests/fixtures/claude_usage/: ansi_noise.txt  failed_to_load.txt  loading.txt  maxed.txt  remaining.txt  settings_panel_with_status_noise.txt  startup_output.txt
