[package]
name = "tally"
version = "0.1.43"
edition = "2021"
rust-version = "1.77"

[lib]
name = "tally_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs = "5"
anyhow = "1"
ureq = { version = "2", features = ["tls", "json"], default-features = false }
portable-pty = "0.9"
regex = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
